baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__explicit_type_args__generic_lambda_instantiation_recovery.snap
---
source: crates/baml_tests/src/compiler2_tir/explicit_type_args.rs
expression: "render_tir(&db, file)"
---
function user.paren_generic_lambda_instantiation() -> int throws never {
  { : !error
    let f = : (x: !error) -> !error throws never
      (x: T) -> T { ... } : (x: !error) -> !error throws never
        {
          x
        }
    f("string") : !error
  }
  !! 114..115: unresolved type: T
  !! 120..121: unresolved type: T
}
lambda user.paren_generic_lambda_instantiation {
}
