baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__explicit_type_args__instantiation_expression_binds_type_arg_into_value.snap
---
source: crates/baml_tests/src/compiler2_tir/explicit_type_args.rs
expression: "render_tir(&db, file)"
---
function user.identity<T>(x: T) -> T throws never {
  { : T
    x : T
  }
}
function user.caller() -> string throws never {
  { : "ok"
    let cb = identity<string> : (x: string) -> string throws never
    "ok" : "ok"
  }
}
