baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__explicit_type_args__instantiation_expression_with_multiple_type_args.snap
---
source: crates/baml_tests/src/compiler2_tir/explicit_type_args.rs
expression: "render_tir(&db, file)"
---
function user.pair<A, B>(a: A, b: B) -> string throws never {
  { : "ok"
    "ok" : "ok"
  }
}
function user.caller() -> string throws never {
  { : "ok"
    let cb = pair<int, string> : (a: int, b: string) -> string throws never
    "ok" : "ok"
  }
}
