baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__explicit_type_args__instantiation_expression_wrong_arity_errors.snap
---
source: crates/baml_tests/src/compiler2_tir/explicit_type_args.rs
expression: "render_tir(&db, file)"
---
function user.identity<T>(x: T) -> T throws never {
  { : T
    x : T
  }
}
function user.caller() -> int throws never {
  { : 1
    let cb = identity<int, string> : (x: T) -> T throws never
    1 : 1
  }
  !! 79..100: function `identity` expects 1 type argument(s), got 2
}
