baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__explicit_type_args__parenthesized_instantiation_recovery.snap
---
source: crates/baml_tests/src/compiler2_tir/explicit_type_args.rs
expression: "render_tir(&db, file)"
---
function user.identity<T>(x: T) -> T throws never {
  { : T
    x : T
  }
}
function user.generic_apply_through_parenthesized_receiver() -> string throws never {
  { : "ok"
    let f = identity<...> : (x: int) -> int throws never
    "ok" : "ok"
  }
}
