baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__explicit_type_args__single_parameter_instantiation_value_matrix.snap
---
source: crates/baml_tests/src/compiler2_tir/explicit_type_args.rs
expression: "render_tir(&db, file)"
---
function user.identity<T>(x: T) -> T throws never {
  { : T
    x : T
  }
}
function user.generic_apply_value_is_specialized() -> string throws never {
  { : "ok"
    let f = identity<...> : (x: int) -> int throws never
    "ok" : "ok"
  }
}
function user.generic_apply_value_rejects_wrong_arg() -> int throws never {
  { : int
    let f = identity<...> : (x: int) -> int throws never
    f("string") : int
  }
  !! 305..313: type mismatch: expected int, got "string"
}
function user.generic_apply_value_accepts_right_arg() -> int throws never {
  { : int
    let f = identity<...> : (x: int) -> int throws never
    f(1) : int
  }
}
function user.generic_apply_value_arity_mismatch() -> string throws never {
  { : "ok"
    let f = identity<...> : (x: int) -> int throws never
    "ok" : "ok"
  }
  !! 563..584: function `identity` expects 1 type argument(s), got 2
}
